--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "jellyfin-server"]
 	path = jellyfin-server
-	url = https://github.com/jellyfin/jellyfin
+	url = https://github.com/asqude/jellyfin
 [submodule "jellyfin-web"]
 	path = jellyfin-web
-	url = https://github.com/jellyfin/jellyfin-web
+	url = https://github.com/asqude/jellyfin-web
 [submodule "jellyfin-server-windows"]
 	path = jellyfin-server-windows
 	url = https://github.com/jellyfin/jellyfin-server-windows.git
